--- a/public/search/index.html
+++ b/public/search/index.html
@@ -18,7 +18,7 @@
 <body>
 <!--
 Loading template
--->
+
 <div class="loading d-flex flex-column justify-content-center text-white bg-dark">
     <div class="container text-center">
         <img src="/assets/images/loading.gif" alt="Loading" style="width:30%"><br>
@@ -26,7 +26,7 @@ Loading template
         <h6 class="text-white mt-5">Searching more than 700 books..</h6>
     </div>
 </div>
-
+-->
 
 <div class="nav-placeholder"></div>
 <nav aria-label="breadcrumb" class="bg-pink text-white">
@@ -43,10 +43,12 @@ Loading template
         <form class="search-form">
             <div class="row">
                 <div class="col-12 col-xl-6">
-                    <input type="search" name="q" value="" class="form-control form-control-lg rounded-pill search-bar" placeholder="Search..">
+                    <input type="search" name="q" value="" class="form-control form-control-lg rounded-pill search-bar"
+                           placeholder="Search..">
                 </div>
                 <div class="col-12 col-xl-6 d-flex justify-content-between mt-3 mt-xl-0">
-                    <select name="orderby" class="text-capitalize form-control custom-select custom-select-lg bg-dark rounded-pill text-white mr-3 filter orderby">
+                    <select name="orderby"
+                            class="text-capitalize form-control custom-select custom-select-lg bg-dark rounded-pill text-white mr-3 filter orderby">
                         <option selected value="default">order by</option>
                         <option value="price">price</option>
                         <option value="author">author</option>
@@ -54,14 +56,17 @@ Loading template
                         <option value="year">year</option>
 
                     </select>
-                    <select name="genre" class="text-capitalize form-control custom-select custom-select-lg bg-dark rounded-pill text-white mx-3 filter genre">
+                    <select name="genre"
+                            class="text-capitalize form-control custom-select custom-select-lg bg-dark rounded-pill text-white mx-3 filter genre">
                         <option selected value="default">genre</option>
                     </select>
-                    <select name="theme" class="text-capitalize form-control custom-select custom-select-lg bg-dark rounded-pill text-white ml-3 filter theme">
+                    <select name="theme"
+                            class="text-capitalize form-control custom-select custom-select-lg bg-dark rounded-pill text-white ml-3 filter theme">
                         <option selected value="default">theme</option>
                     </select>
                 </div>
             </div>
+            <input type="text" name="page" class="d-none page" value="0">
             <button type="submit" class="d-none"></button>
         </form>
     </div>
@@ -82,6 +87,24 @@ Loading template
     <div class="container">
         <h4 class="text-dark font-weight-bold">Books</h4>
         <div class="books-container"></div>
+    </div>
+</div>
+<div class="section navigation my-5">
+    <div class="container text-pink">
+        <div class="row">
+            <div class="col-6">
+                <button class="previous btn btn-outline-pink" type="button">
+                    <i class="fa fa-arrow-circle-left"></i>
+                    <span class="ml-2">previous</span>
+                </button>
+            </div>
+            <div class="col-6 d-flex justify-content-end">
+                <button class="next btn btn-outline-pink" type="button">
+                    <span class="mr-2">next</span>
+                    <i class="fa fa-arrow-circle-right"></i>
+                </button>
+            </div>
+        </div>
     </div>
 </div>
 
