--- a/public/backend/main.html
+++ b/public/backend/main.html
@@ -453,7 +453,7 @@
         <p><em>Describe here how development tasks have been subdivided among members of the group</em></p>
     </div>
     <ul class="list-group">
-        <li class="list-group-item"><p>Alberto Mario Bellini worked both on the backend and on the frontend of the
+        <li class="list-group-item"><p><strong>Alberto Mario Bellini</strong> worked both on the backend and on the frontend of the
             application. For what
             concerns
             the backend he helped developing the OpenAPI specification (50%) and implemented 30% of the queries to the
@@ -474,7 +474,7 @@
             developing a series of utilities for interacting with the API Interface and others to load HTML components
             and
             handle user session.</p></li>
-        <li class="list-group-item"><p>Gianpaolo Di Pietro worked both on the frontend and backend of the application.
+        <li class="list-group-item"><p><strong>Gianpaolo Di Pietro</strong> worked both on the frontend and backend of the application.
             For the backend part he
             wrote
             the API specification (5% of the time) and he implemented most of the queries in order to map the
@@ -489,6 +489,13 @@
             time). He also wrote some python script for preprocess all the data about the books, authors and events that
             we
             have in the database and upload them using SQL queries (5% of the time).</p></li>
+        <li class="list-group-item"><p>
+            <strong>Luna Alessia Rota</strong> as designer worked mainly on the website layout and content organization and on the frontend of the application.
+            For the realization of the website layout Luna planned at first the desired User Experience, in order to build an easy-to-use and entertaining website.
+            She focused her attention on the wireframe design on Adobe XD and Illustrator (30% of the time) and then on the realization of all the UI element necessary for the application frontend development.
+            While planning the content organization on the website she worked simultaneously on the C-IDM and L-IDM schemes (5% of the time) and at the same time she wrote the draft of the ER diagram (5%) following the technical instructions of her collegues, in order to keep logically aligned all the components of the application.
+            For what concern the frontend Luna implemented some of the web pages working mainly on the HTML and SCSS, but she spend most of her time fixing all the pages alignment and style (60% of the time) through Bootstrap personalized functions and SCSS.
+        </p></li>
     </ul>
     <h5 id="analysis-of-existing-api">Analysis of existing API</h5>
     <p>The first API specification that inspired our is the Swagger Petstore, an example API that is provided by the
@@ -542,6 +549,13 @@
             elasticity and potentiality of the bootstrtap framework, how to build websites that are beautiful, and
             responsive to different screen sizes, how to manage the communication between the application server, the
             database and the front-end application.</p></li>
+        <li class="list-group-item"><p>
+            <strong>Luna Alessia Rota</strong> learned how to design a website from a complete new point of view. She now knows what there is behind a simple UI decision and how much it can affect the development work.
+            She improved her HTML skills and she learned how to use the potentiality of SCSS in a proper way. She learned how to design more efficient web pages and now she is used to think by container, row and column from the first draft of wireframes.
+            Thanks to Bootstrap she now knows how to quickly build a responsive web page from zero and she finally understood what it is needed to make a working website for real.
+            Luna is currently doing an internship where her main works consist in designing wireframes and UI on graphic programs, but she noticed the improvement she obtained with this course when she was able to understand and collaborate with the web developers of the company.
+            She would like to deepen JS, and she will continue for sure to experiment on website development.
+        </p></li>
     </ul>
 </div>
 <script src="/lib/jquery/dist/jquery.js"></script>
